<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            tools:ignore="MissingConstraints"
            android:translationZ="2dp" />

        <ImageView
            android:id="@+id/image_item_photo"
            android:layout_width="401dp"
            android:layout_height="563dp"
            android:contentDescription="@string/detail_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/button_favorite"
            android:layout_width="48dp"
            android:layout_height="51dp"
            android:background="@drawable/ic_favorite_border_24dp"
            android:layout_marginEnd="27dp"
            android:layout_marginStart="304dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_item_photo"
            app:layout_constraintEnd_toStartOf="@+id/image_item_photo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_item_photo"
            app:layout_constraintVertical_bias="0.593"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="304dp" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_item_photo"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/text_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/text_popularity"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/popularity"
            app:layout_constraintTop_toBottomOf="@+id/text_release"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/text_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/vote_average"
            app:layout_constraintTop_toBottomOf="@+id/popularity"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/popularity"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_release"
            android:layout_marginLeft="16dp" />


        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/vote_average"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularity"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/overview"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_average"
            android:layout_marginLeft="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>